improved on-boarding workflow

--- a/internal/options.html
+++ b/internal/options.html
@@ -6,12 +6,13 @@
     <meta charset="utf-8">
 </head>
 
-<body>
-
-    <form>
-        <label>Snippet Box Instance Url<input type="text" id="instance-url"></label>
-        <button type="submit">Save</button>
-    </form>
+<body style="margin:30px;">
+    <div style="margin:0 auto; display:block;">
+        <form>
+            <label>Snippet Box URL: <input type="text" id="instance-url"></label>
+            <button type="submit">Save</button>
+        </form>
+    </div>
 
     <script src="options.js"></script>
 
